tests/flat_file/ui/auto_plugin_invalid_function.stderr
error: unexpected `self` parameter in function
 --> tests/flat_file/ui/auto_plugin_invalid_function.rs:7:22
  |
7 |     fn plugin(&self, &self) {}
  |                      ^^^^^ must be the first parameter of an associated function

error: unexpected second method receiver
 --> tests/flat_file/ui/auto_plugin_invalid_function.rs:7:23
  |
7 |     fn plugin(&self, &self) {}
  |                       ^^^^
