tests/flat_file/ui/auto_plugin_invalid_function.rs
use bevy_auto_plugin::modes::flat_file::prelude::*;

struct Test;

impl Test {
    #[auto_plugin]
    fn plugin(&self, &self) {}
}

// dummy main
fn main() {}
